[Local NTP] Fix attribution hidden by theme background
Z-index -1 places the attribution behind the body element, which hides it when the body has a background color/image. Set ntp-contents z-index = 1 to prevent this.

Bug: 823068
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Reviewed-on: https://chromium-review.googlesource.com/982553
Commit-Queue: Kristi Park <kristipark@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#546577}(cherry picked from commit 257158ee0bffba0301e3159eea056a0e118c4f0a)
Reviewed-on: https://chromium-review.googlesource.com/988912
Cr-Commit-Position: refs/branch-heads/3359@{#513}
Cr-Branched-From: 66afc5e5d10127546cc4b98b9117aff588b5e66b-refs/heads/master@{#540276}

--- a/chrome/browser/resources/local_ntp/local_ntp.css
+++ b/chrome/browser/resources/local_ntp/local_ntp.css
@@ -92,6 +92,8 @@ button {
   display: flex;
   flex-direction: column;
   height: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 #logo,
